# zata-codes-template

./: .dockerignore  .env.dokploy.example  .env.example  .gitignore  .iar.toml  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  GUIDELINES_MAINTENANCE.md  README.md  alembic.ini  config.toml  dev.db-journal  docker-compose.dokploy.yml  docker-compose.monitoring.yml  docker-compose.testing.yml  docker-compose.yml  findings.md  justfile  justfile.shared  main.py  mkdocs.yml  pnpm-lock.yaml  pnpm-workspace.yaml  progress.md  pyproject.toml  pytest.ini  ruff.toml  task_plan.md
.claude/: settings.json  settings.local.json
.cursor/commands/: cursor.md
.github/: copilot-instructions.md
.github/instructions/: backend.instructions.md  playwright.instructions.md  python-tests.instructions.md
.github/workflows/: cd.yml  ci.yml
ai_agent/: .env.example
ai_agent/examples/: test_utils_model_loader.py
ai_agent/utils/: __init__.py  model_loader.py  models.json
alembic/: env.py
alembic/versions/: 20260625-111246-agent_platform_init.py  20260625-182322-auth_domains_init.py
apps/: __init__.py
backend/: Dockerfile  main.py
backend/api/: __init__.py
backend/apps/: __init__.py
backend/capabilities/: __init__.py
backend/core/: __init__.py
backend/engines/: __init__.py
backend/infrastructure/: __init__.py  helpers.py
capabilities/: __init__.py
capabilities/crawling/: crawler.py  examples.py
capabilities/rag/: __init__.py
capabilities/skills/: __init__.py
core/: __init__.py
core/shared/: __init__.py
crawler/: .env.example  README.md  __init__.py  environment.py  example.py
crawler/core/: __init__.py  crawler.py
crawler/models/: __init__.py  database.py
crawler/utils/: __init__.py  drission_page_utils.py  helpers.py  proxy_manager.py
deploy/vps-traefik/: .env.example  README.md  app.env.example  docker-compose.yml  github-actions-deploy.yml.example
docs/: getting-started.md  index.md
docs/ai-standards/: alembic.md  architecture.md  code-reuse.md  comments-docstrings.md  index.md  testing.md  tooling.md
docs/api/: references.md
docs/architecture/: authentication.md  frontend-architecture.md  system-design.md
docs/core/: prompt_engineering.md
docs/database/: migrations.md  schema.md
docs/dev/: evaluation.md
docs/guides/: backup.md  codex-notifications.md  configuration.md  deployment.md  e2e.md  idea-inbox.md  observability.md  planning-with-files.md  prd-standard.md  review-workflow.md  skill-lifecycle.md
docs/javascripts/: mermaid.js
docs/prototypes/: index.md  prd-demo.html  worktree-frontend-demo.html
docs/stylesheets/: mermaid-copy.css
e2e-template/: README.md  package.json  playwright.config.ts  tsconfig.json
e2e-template/fixtures/: session.fixture.ts
e2e-template/page-objects/: LoginPage.ts
e2e-template/scripts/: global-setup.mjs  global-teardown.mjs  stack-control.mjs
e2e-template/support/: api-client.ts  env.ts
frontend/: .env.example  .gitignore  .prettierignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend-admin/: Dockerfile  README.md  eslint.config.js  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  vite.config.ts
frontend-admin/src/: vite-env.d.ts
frontend-public/: .npmrc  Dockerfile  README.md  eslint.config.mjs  next.config.ts  package.json  pnpm-lock.yaml
frontend-public/app/: globals.css  layout.tsx
frontend-public/components/: theme-provider.tsx
frontend-public/lib/: utils.ts
frontend/src/: app.tsx  (+4 more)
hooks/: archive_planning_session.sh  archive_tasks.py  check_architecture.py  check_guidelines_consistency.py  check_prd_acceptance_checklist.py  check_sqlalchemy_model_comments.py  run_jscpd_duplication_check.py  run_pylint_duplication_check.py
infrastructure/: __init__.py
playwright-e2e/: .eslintrc.cjs
prompt/: frontend-public-agent-platform.md  编写规范commit.md
scripts/: README.md  check_claude_code.sh  codex_session.sh  export_env_encrypted.sh  git_worktree.sh  git_worktree_merge.sh  release.py  sync_template.sh
tasks/: 20260312-180937-prd-worktree-frontend-deps.md
tests/: conftest.py  test_alembic_migration_naming.py  test_archive_tasks.py  test_backup_database.py  test_backup_restore.py  test_bootstrap.py  test_check_max_file_lines.py  test_dokploy_environment.py  test_duplication_check_utils.py  test_embedding_model.py  test_health.py  test_logger.py  test_metrics.py  test_model_loader_config.py  test_model_loader_real.py  test_openapi_schema.py  test_planning_with_files.py  test_prd_acceptance_checklist.py  test_prd_skill_checker.py  test_quality_flag_hooks.py  test_release_script.py  test_request_context.py  test_run_jscpd_duplication_check.py  test_settings_config.py  test_settings_providers.py  test_setup_copied_database.py  test_sync_template.py  test_whats_new_manifest.py
utils/: __init__.py  database.py  helpers.py  logger.py  settings.py
(+575 files in other folders)
