[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zata-codes-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "boto3>=1.37.0",
    "fastapi>=0.115.0",
    "pre-commit>=4.5.1",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.1.0",
    "uvicorn[standard]>=0.30.0",
]

[project.optional-dependencies]
llm = [
    "langchain-anthropic>=0.1.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
    "pylint>=3.2.0",
    "pytest>=8.3.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocstrings[python]>=0.30.0",
    "pymdown-extensions>=10.14",
    "socksio>=1.0.0",
]
