[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "zata-codes-template"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.18.4",
    "bcrypt>=4.1.0",
    "fastapi>=0.115.0",
    "langchain-core>=0.2.0",
    "langchain-openai>=0.1.0",
    "pre-commit>=4.5.1",
    "prometheus-client>=0.20.0",
    "psycopg2-binary>=2.9.9",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.1.0",
    "python-json-logger>=2.0.7",
    "redis>=5.0.0",
    "uvicorn[standard]>=0.30.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "fakeredis>=2.21.0",
    "pre-commit>=4.5.1",
    "pylint>=3.2.0",
    "pytest>=8.3.0",
    "pytest-xdist>=3.6.0",
    "mkdocs>=1.6.1",
    "mkdocs-material>=9.6.0",
    "mkdocs-git-revision-date-localized-plugin>=1.4.5",
    "mkdocstrings[python]>=0.30.0",
    "pymdown-extensions>=10.14",
    "socksio>=1.0.0",
]

[tool.pytest.ini_options]
markers = [
    "slow: tests that are slow due to real git/subprocess/network or other heavy I/O",
    "real_api: tests that require real API keys or external live services",
    "redis: tests that require a live Redis instance (opt-in via REDIS_URL)",
]
addopts = "-m 'not slow and not real_api and not redis' -n auto --dist=loadgroup"
